# picoo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json
.cursor/rules/: project-overview.mdc  rust-wasm.mdc  testing.mdc  typescript-api.mdc
.github/workflows/: ci.yml
crates/picoo-core/: Cargo.toml  LICENSE
crates/picoo-core/src/: crop.rs  decode.rs  dpi.rs  encode.rs  error.rs  info.rs  lib.rs  options.rs  png_quant.rs  resize.rs
examples/browser/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
examples/browser/e2e/: demo.spec.ts  helpers.ts
examples/browser/src/: main.ts  style.css
examples/miniprogram/: README.md  project.config.json  project.private.config.json
examples/miniprogram/miniprogram/: app.js  app.json  app.wxss  sitemap.json
examples/miniprogram/miniprogram/libs/picoo/: README.md
examples/miniprogram/miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
examples/miniprogram/miniprogram/workers/picoo/: README.md
examples/uniapp/: README.md
scripts/: build.sh  dev-mp.mjs  dev-web.mjs  generate-fixtures.mjs  mp-text-encoding-polyfill.js  mp-worker-entry.js  patch-mp-glue.js  prepare-pkg-mp.mjs  sync-miniprogram-example.mjs
