[package]
name = "picoo-core"
version = "0.1.0"
edition = "2021"
description = "WASM image processing core for picoo"
license = "MIT"
repository = "https://github.com/devoink/picoo"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fast_image_resize = { version = "5", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasm-bindgen = "0.2"
js-sys = "0.3"
zenwebp = { version = "0.4", default-features = false, features = ["std"] }
imagequant = { version = "4", default-features = false }
png = "0.17"
